--- a/gui-tool/ui/actiontab_frame.ui
+++ b/gui-tool/ui/actiontab_frame.ui
@@ -90,6 +90,9 @@
            <verstretch>0</verstretch>
           </sizepolicy>
          </property>
+         <property name="toolTip">
+          <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Set to -1 to use the full image width&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+         </property>
          <property name="text">
           <string>Width</string>
          </property>
@@ -104,7 +107,7 @@
           </sizepolicy>
          </property>
          <property name="toolTip">
-          <string>-1 uses image width</string>
+          <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Set to -1 to use the full image width&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
          </property>
          <property name="minimum">
           <number>-1</number>
@@ -126,6 +129,9 @@
            <verstretch>0</verstretch>
           </sizepolicy>
          </property>
+         <property name="toolTip">
+          <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Set to -1 to use the full image height&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+         </property>
          <property name="text">
           <string>Height</string>
          </property>
@@ -140,7 +146,7 @@
           </sizepolicy>
          </property>
          <property name="toolTip">
-          <string>-1 uses image height</string>
+          <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Set to -1 to use the full image height&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
          </property>
          <property name="minimum">
           <number>-1</number>
